Updated about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -11,10 +11,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/img/me.png">
-        <p>Hello</p>
+        <p>This app uses data from Mapbox and Weatherstack.</p>
     </div>
-    
     {{>footer}}
 </body>
 
